--- a/index.html
+++ b/index.html
@@ -1,47 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
 
-  Your Result
-  76
-  of 100
+    <title>Frontend Mentor | Results summary component</title>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="header">
+          <h1 class="title">Your Result</h1>
+          <div class="circle">
+            <h1 class="score">76</h1>
+            <p class="of">of 100</p>
+          </div>
+        </div>
+        <article>
+          <h4 class="great">Great</h4>
+          <p class="text">
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </article>
+      </div>
 
-  Reaction
-  80 / 100
+      <div class="summary">
+        <h1 class="title">Summary</h1>
+        <div>
+          <div class="reaction">
+            <div class="icon">
+              <img src="./assets/images/icon-reaction.svg" alt="reaction" />
+            </div>
+            <div class="text">
+              <p class="category">Reaction</p>
+              <p class="score">80 / <span>100</span></p>
+            </div>
+          </div>
+          <div class="memory">
+            <div class="icon">
+              <img src="./assets/images/icon-memory.svg" alt="memory" />
+            </div>
+            <div class="text">
+              <p class="category">Memory</p>
+              <p class="score">92 / <span>100</span></p>
+            </div>
+          </div>
+          <div class="verbal">
+            <div class="icon">
+              <img src="./assets/images/icon-verbal.svg" alt="verbal" />
+            </div>
+            <div class="text">
+              <p class="category">Verbal</p>
+              <p class="score">61 / <span>100</span></p>
+            </div>
+          </div>
+          <div class="visual">
+            <div class="icon">
+              <img src="./assets/images/icon-visual.svg" alt="visual" />
+            </div>
+            <div class="text">
+              <p class="category">Visual</p>
+              <p class="score">72 / <span>100</span></p>
+            </div>
+          </div>
+        </div>
+        <button class="continue">Continue</button>
+      </div>
+    </div>
 
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
